--- a/package.json
+++ b/package.json
@@ -9,16 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.11.2",
+    "@mantine/charts": "^7.11.2",
+    "@mantine/code-highlight": "^7.11.2",
+    "@mantine/core": "^7.11.2",
+    "@mantine/dates": "^7.11.2",
+    "@mantine/dropzone": "^7.11.2",
+    "@mantine/form": "^7.11.2",
+    "@mantine/hooks": "^7.11.2",
+    "@mantine/modals": "^7.11.2",
+    "@mantine/notifications": "^7.11.2",
+    "@mantine/nprogress": "^7.11.2",
+    "@mantine/spotlight": "^7.11.2",
+    "@mantine/tiptap": "^7.11.2",
+    "@tabler/icons-react": "^3.11.0",
+    "@tiptap/extension-link": "^2.5.4",
+    "@tiptap/react": "^2.5.4",
+    "@tiptap/starter-kit": "^2.5.4",
+    "dayjs": "^1.11.12",
+    "embla-carousel-react": "^8.1.7",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "recharts": "2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8.4.39",
+    "postcss-preset-mantine": "^1.16.0",
+    "postcss-simple-vars": "^7.0.1",
+    "typescript": "^5"
   }
 }
