--- a/package.json
+++ b/package.json
@@ -5,8 +5,17 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "analyze": "ANALYZE=true next build",
     "start": "next start",
-    "lint": "next lint"
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint .",
+    "prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
+    "prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
+    "jest": "jest",
+    "jest:watch": "jest --watch",
+    "test": "yarn prettier:check && yarn lint && yarn typecheck && yarn jest",
+    "format": "npx prettier --write .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@mantine/carousel": "^7.11.2",
@@ -28,20 +37,41 @@
     "@tiptap/starter-kit": "^2.5.4",
     "dayjs": "^1.11.12",
     "embla-carousel-react": "^8.1.7",
+    "husky-init": "^8.0.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "2"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^14.2.5",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
+    "@typescript-eslint/parser": "^7.16.1",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-mantine": "^3.2.0",
     "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^28.6.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-testing-library": "^6.2.2",
+    "husky": "^8.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.39",
     "postcss-preset-mantine": "^1.16.0",
     "postcss-simple-vars": "^7.0.1",
+    "prettier": "^3.3.3",
+    "ts-jest": "^29.2.3",
     "typescript": "^5"
   }
 }
