--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
     "mantine",
     "plugin:@next/next/recommended",
     "plugin:jest/recommended",
-    "prettier"
+    "prettier",
+    "plugin:storybook/recommended"
   ],
   "ignorePatterns": [
     "**/dist/**",
@@ -13,11 +14,18 @@
     "*.mjs",
     "*.js"
   ],
-  "plugins": ["testing-library", "jest"],
+  "plugins": [
+    "testing-library",
+    "jest"
+  ],
   "overrides": [
     {
-      "files": ["**/?(*.)+(spec|test).[jt]s?(x)"],
-      "extends": ["plugin:testing-library/react"]
+      "files": [
+        "**/?(*.)+(spec|test).[jt]s?(x)"
+      ],
+      "extends": [
+        "plugin:testing-library/react"
+      ]
     }
   ],
   "parserOptions": {
