--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "jest:watch": "jest --watch",
     "test": "yarn prettier:check && yarn lint && yarn typecheck && yarn jest",
     "format": "npx prettier --write .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@mantine/carousel": "^7.11.2",
@@ -31,6 +33,7 @@
     "@mantine/nprogress": "^7.11.2",
     "@mantine/spotlight": "^7.11.2",
     "@mantine/tiptap": "^7.11.2",
+    "@next/bundle-analyzer": "^14.2.5",
     "@tabler/icons-react": "^3.11.0",
     "@tiptap/extension-link": "^2.5.4",
     "@tiptap/react": "^2.5.4",
@@ -44,7 +47,16 @@
     "recharts": "2"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.6.1",
     "@next/eslint-plugin-next": "^14.2.5",
+    "@storybook/addon-essentials": "^8.2.5",
+    "@storybook/addon-interactions": "^8.2.5",
+    "@storybook/addon-links": "^8.2.5",
+    "@storybook/addon-onboarding": "^8.2.5",
+    "@storybook/blocks": "^8.2.5",
+    "@storybook/nextjs": "^8.2.5",
+    "@storybook/react": "^8.2.5",
+    "@storybook/test": "^8.2.5",
     "@testing-library/jest-dom": "^6.4.6",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
@@ -52,6 +64,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
+    "add": "^2.0.6",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
@@ -63,6 +76,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-testing-library": "^6.2.2",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
@@ -71,7 +85,9 @@
     "postcss-preset-mantine": "^1.16.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.3.3",
+    "storybook": "^8.2.5",
     "ts-jest": "^29.2.3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "yarn": "^1.22.22"
   }
 }
