--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@mantine/tiptap": "^7.11.2",
     "@next/bundle-analyzer": "^14.2.5",
     "@tabler/icons-react": "^3.11.0",
+    "@testing-library/react": "^16.0.0",
     "@tiptap/extension-link": "^2.5.4",
     "@tiptap/react": "^2.5.4",
     "@tiptap/starter-kit": "^2.5.4",
